Add: Get all users endpoint, docs for endpoint
